Fixed issue with card text display. Forced line height for card title to be consistent between wrapped and unwrapped text.

--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@
     padding: 0;
     background-color: var(--bg-color-light);
 }
+.card-title {
+    line-height: 20px;
+    height: 40px;
+}
 
 .card-body {
 
